--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- ===============================================-->
     <!--    Document Title-->
     <!-- ===============================================-->
-    <title>Boldo | Boldo Agency Template</title>
+    <title>Youtube Timestamps Share</title>
 
 
     <!-- ===============================================-->
