--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <p class="text-white py-lg-3 py-2">A chrome extension to share Youtube Time Time-Stamps.
                 </p>
                 <div class="d-sm-flex align-items-center gap-3">
-                  <button class="btn btn-success text-black mb-3 w-75">Learn More</button>
+                  <a class="btn btn-success text-black mb-3 w-75">See demo</a>
                 </div>
               </div>
               <div class="col-lg-6 text-center text-lg-end mt-3 mt-lg-0"><img class="img-fluid" src="assets/img/services/hero.png" alt="" /></div>
